Bug 283017 - kde daemon crash after blueteathering fail
Summary: kde daemon crash after blueteathering fail
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 294247 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-29 07:56 UTC by shani
Modified: 2012-02-16 19:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0_rc2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description shani 2011-09-29 07:56:50 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic i686
Distribution: Ubuntu oneiric (development branch)

-- Information about the crash:
- What I was doing when the application crashed: i was conected to my mobile broadband via bluedevil. and when i tried using "curl" from terminal kdedaemon crashed.

-- Backtrace:
Application: KDE Daemon (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb782f710 (LWP 1720))]

Thread 4 (Thread 0xb48ffb70 (LWP 1736)):
#0  0x00da6d10 in __GI_clock_gettime (clock_id=1, tp=0xb48ff028) at ../sysdeps/unix/clock_gettime.c:116
#1  0x00e8e7d5 in do_gettime (frac=0xb48ff020, sec=0xb48ff018) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x00f614b6 in QTimerInfoList::updateCurrentTime (this=0xb4901c6c) at kernel/qeventdispatcher_unix.cpp:339
#4  0x00f6180a in QTimerInfoList::timerWait (this=0xb4901c6c, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x00f60053 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb48ff12c) at kernel/qeventdispatcher_glib.cpp:136
#6  0x00f600ed in timerSourcePrepare (source=0xb4901c38, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x010c088c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x010c1637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x010c1c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x00f60b37 in QEventDispatcherGlib::processEvents (this=0xa11c298, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x00f311dd in QEventLoop::processEvents (this=0xb48ff2b0, flags=...) at kernel/qeventloop.cpp:149
#12 0x00f31421 in QEventLoop::exec (this=0xb48ff2b0, flags=...) at kernel/qeventloop.cpp:201
#13 0x00e3490b in QThread::exec (this=0xa11fa70) at thread/qthread.cpp:498
#14 0x00f11e2d in QInotifyFileSystemWatcherEngine::run (this=0xa11fa70) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x00e377b3 in QThreadPrivate::start (arg=0xa11fa70) at thread/qthread_unix.cpp:331
#16 0x01a49d31 in start_thread (arg=0xb48ffb70) at pthread_create.c:304
#17 0x0071d0ce in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 3 (Thread 0xae914b70 (LWP 2083)):
#0  0x00f610b4 in idleTimerSourceCheck (source=0xa04deb8) at kernel/qeventdispatcher_glib.cpp:220
#1  0x010c0f24 in g_main_context_check () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0x010c18f0 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x010c1c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x00f60b37 in QEventDispatcherGlib::processEvents (this=0xa46a9f8, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00f311dd in QEventLoop::processEvents (this=0xae9142b0, flags=...) at kernel/qeventloop.cpp:149
#6  0x00f31421 in QEventLoop::exec (this=0xae9142b0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00e3490b in QThread::exec (this=0xa416be0) at thread/qthread.cpp:498
#8  0x00f11e2d in QInotifyFileSystemWatcherEngine::run (this=0xa416be0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00e377b3 in QThreadPrivate::start (arg=0xa416be0) at thread/qthread_unix.cpp:331
#10 0x01a49d31 in start_thread (arg=0xae914b70) at pthread_create.c:304
#11 0x0071d0ce in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xb5221b70 (LWP 3251)):
#0  __pthread_mutex_unlock_usercnt (mutex=0xb4901104, decr=1) at pthread_mutex_unlock.c:36
#1  0x0072af54 in pthread_mutex_unlock (mutex=0xb4901104) at forward.c:184
#2  0x010c0c35 in g_main_context_query () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x010c1664 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x010c1c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x00f60b37 in QEventDispatcherGlib::processEvents (this=0xb49017d0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00f311dd in QEventLoop::processEvents (this=0xb52212c0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00f31421 in QEventLoop::exec (this=0xb52212c0, flags=...) at kernel/qeventloop.cpp:201
#8  0x00e3490b in QThread::exec (this=0xa2fb890) at thread/qthread.cpp:498
#9  0x09a19757 in ?? () from /usr/lib/kde4/kded_bluedevil.so
#10 0x00e377b3 in QThreadPrivate::start (arg=0xa2fb890) at thread/qthread_unix.cpp:331
#11 0x01a49d31 in start_thread (arg=0xb5221b70) at pthread_create.c:304
#12 0x0071d0ce in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb782f710 (LWP 1720)):
[KCrash Handler]
#7  0x00000028 in ?? ()
#8  0x00f48850 in QObject::connect (sender=0xa196e40, signal=0x21fbe53 "2signalQualityChanged(uint)", receiver=0xa53e1b0, method=0x21fbe3b "1setSignalQuality(uint)", type=Qt::AutoConnection) at kernel/qobject.cpp:2489
#9  0x021f0a14 in Knm::GsmInterfaceConnection::connectMMSignals (this=0xa53e1b0) at ../../../libs/internals/gsminterfaceconnection.cpp:65
#10 0x021daef0 in Knm::GsmInterfaceConnection::qt_metacall (this=0xa53e1b0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf9f49c8) at moc_gsminterfaceconnection.cpp:97
#11 0x00f38b7d in metacall (argv=0xbf9f49c8, idx=16, cl=QMetaObject::InvokeMetaMethod, object=0xa53e1b0) at kernel/qmetaobject.cpp:237
#12 QMetaObject::metacall (object=0xa53e1b0, cl=QMetaObject::InvokeMetaMethod, idx=16, argv=0xbf9f49c8) at kernel/qmetaobject.cpp:232
#13 0x00f47a6a in QMetaObject::activate (sender=0xa1a2af0, m=0x227db18, local_signal_index=1, argv=0xbf9f49c8) at kernel/qobject.cpp:3278
#14 0x02269a45 in Solid::Control::ModemManager::Notifier::modemInterfaceAdded (this=0xa1a2af0, _t1=...) at ./modemmanager.moc:98
#15 0x0226b433 in Solid::Control::ModemManagerPrivate::_k_modemInterfaceAdded (this=0xa1a2af0, udi=...) at ../../../../libs/solid/control/modemmanager.cpp:156
#16 0x0226b4be in Solid::Control::ModemManagerPrivate::qt_metacall (this=0xa1a2af0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbf9f4b48) at ./modemmanager_p.moc:81
#17 0x00f38b7d in metacall (argv=0xbf9f4b48, idx=7, cl=QMetaObject::InvokeMetaMethod, object=0xa1a2af0) at kernel/qmetaobject.cpp:237
#18 QMetaObject::metacall (object=0xa1a2af0, cl=QMetaObject::InvokeMetaMethod, idx=7, argv=0xbf9f4b48) at kernel/qmetaobject.cpp:232
#19 0x00f47a6a in QMetaObject::activate (sender=0xa1c1350, m=0x232be84, local_signal_index=1, argv=0xbf9f4b48) at kernel/qobject.cpp:3278
#20 0x02302ab5 in MMModemManager::modemInterfaceAdded (this=0xa1c1350, _t1=...) at ./manager.moc:116
#21 0x02302c6a in MMModemManager::deviceAdded (this=0xa1c1350, objpath=...) at ../../../solid/modemmanager-0.4/manager.cpp:137
#22 0x02303b5b in MMModemManager::qt_metacall (this=0xa1c1350, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbf9f4cc8) at ./manager.moc:94
#23 0x00f38b7d in metacall (argv=0xbf9f4cc8, idx=10, cl=QMetaObject::InvokeMetaMethod, object=0xa1c1350) at kernel/qmetaobject.cpp:237
#24 QMetaObject::metacall (object=0xa1c1350, cl=QMetaObject::InvokeMetaMethod, idx=10, argv=0xbf9f4cc8) at kernel/qmetaobject.cpp:232
#25 0x00f47a6a in QMetaObject::activate (sender=0xa1b6008, m=0x232da38, local_signal_index=0, argv=0xbf9f4cc8) at kernel/qobject.cpp:3278
#26 0x02317c55 in OrgFreedesktopModemManagerInterface::DeviceAdded (this=0xa1b6008, _t1=...) at ./mm-manager-clientinterface.moc:95
#27 0x02317d25 in OrgFreedesktopModemManagerInterface::qt_metacall (this=0xa1b6008, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf9f4e0c) at ./mm-manager-clientinterface.moc:80
#28 0x081f2d87 in QDBusConnectionPrivate::deliverCall (this=0xa05e8d8, object=0xa1b6008, msg=..., metaTypes=..., slotIdx=172761704) at qdbusintegrator.cpp:942
#29 0x081fcc26 in QDBusCallDeliveryEvent::placeMetaCall (this=0xa4eb208, object=0xa1b6008) at qdbusintegrator_p.h:103
#30 0x00f4ab52 in QObject::event (this=0xa1b6008, e=0xa4eb208) at kernel/qobject.cpp:1217
#31 0x04e7dd54 in notify_helper (e=0xa4eb208, receiver=0xa1b6008, this=0x9f722d8) at kernel/qapplication.cpp:4486
#32 QApplicationPrivate::notify_helper (this=0x9f722d8, receiver=0xa1b6008, e=0xa4eb208) at kernel/qapplication.cpp:4458
#33 0x04e83103 in QApplication::notify (this=0xa4eb208, receiver=0xa1b6008, e=0xa4eb208) at kernel/qapplication.cpp:3886
#34 0x009dd791 in KApplication::notify (this=0xbf9f5540, receiver=0xa1b6008, event=0xa4eb208) at ../../kdeui/kernel/kapplication.cpp:311
#35 0x00f3219e in QCoreApplication::notifyInternal (this=0xbf9f5540, receiver=0xa1b6008, event=0xa4eb208) at kernel/qcoreapplication.cpp:787
#36 0x00f35f93 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#37 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9efcca8) at kernel/qcoreapplication.cpp:1428
#38 0x00f360ec in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1321
#39 0x00f606a4 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#40 postEventSourceDispatch (s=0x9f74700) at kernel/qeventdispatcher_glib.cpp:277
#41 0x010c125f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#42 0x010c1990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#43 0x010c1c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#44 0x00f60ada in QEventDispatcherGlib::processEvents (this=0x9efe1e0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#45 0x04f35b5a in QGuiEventDispatcherGlib::processEvents (this=0x9efe1e0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#46 0x00f311dd in QEventLoop::processEvents (this=0xbf9f54a4, flags=...) at kernel/qeventloop.cpp:149
#47 0x00f31421 in QEventLoop::exec (this=0xbf9f54a4, flags=...) at kernel/qeventloop.cpp:201
#48 0x00f3619d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#49 0x04e7b8f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#50 0x01e54899 in kdemain (argc=1, argv=0x9f435d8) at ../../kded/kded.cpp:924
#51 0x0804f762 in launch (argc=<optimized out>, _name=0x8052467 "kded4", args=<optimized out>, cwd=0x0, envc=0, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x80522ee "0") at ../../kinit/kinit.cpp:746
#52 0x0804c909 in main (argc=172761704, argv=0xa54b588, envp=0x10) at ../../kinit/kinit.cpp:1861

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-09-29 22:40:37 UTC
Which NetworkManager and ModemManager versions do you use? This crashlog is wierd because the crash happened during a DeviceAdd signal, which should not have been emitted since your device (your mobile broadband cellphone/modem) is already added. It seems like your device was reseted somehow. Can you reproduce this problem?
Comment 2 Lamarque V. Souza 2011-10-26 16:37:25 UTC
Git commit 28435fd3d1dead8c6da11e337be15f2d22455d82 by Lamarque V. Souza.
Committed on 26/10/2011 at 18:28.
Pushed by lvsouza into branch 'nm09'.

Use correct modem identifier when deciding to reset internal pointers
for bluetooth devices.

BUG: 283017
FIXED-IN: 0.9.0_rc2

M  +1    -1    plasma_nm_version.h
M  +11   -7    solidcontrolfuture/solid/networkmanager-0.9/networkmodeminterface.cpp
M  +1    -0    solidcontrolfuture/solid/networkmanager-0.9/networkmodeminterface_p.h

http://commits.kde.org/networkmanagement/28435fd3d1dead8c6da11e337be15f2d22455d82
Comment 3 Jekyll Wu 2012-02-16 19:38:35 UTC
*** Bug 294247 has been marked as a duplicate of this bug. ***