Use correct modem identifier when deciding to reset internal pointers for bluetooth devices.

BUG: 283017
FIXED-IN: 0.9.0_rc2